--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 firmware/*
 firmware/**/bin
 firmware/**/obj
-firmware/**/makefile
+firmware/**/Makefile
 firmware/**/test-suite
 firmware/**/_can_dbc/*
 firmware/**/cgreen-test-suite
